6.00.38:

-BUG FIX: Upgraded Desktop Editions to PHP v8.3.8 (fixes multiple security vulnerabilities: https://www.cvedetails.com/vulnerability-list/vendor_id-74/PHP.html )

-BUG FIX: Fixed issues with Desktop Editions being able to run security checks, IF you enabled  "Security => Interface Login" in the admin area (sorry!)

-BUG FIX: Fixed issues with some app configs not reloading properly on config reset / user update

-BUG FIX: Miscellaneous fixes

-Added Admin Config settings into these admin interface sections (these config settings are now editable in the admin interface): Currency Support, Power User, Access Stats

-Converted the old ETH ICOs config to a generalized presale tokens config, and moved to the new admin section CURRENCY SUPPORT

-Moved ENTIRE mining page config into dynamic-config.php (except for HIVE power down settings)

-Moved the user area 'Save Changes' button into the sidebar (like the Admin Area has)

-Miscellaneous user experience improvements / optimizations / refactoring

-Increased reliability of CURL (in PHP) for API data requests

-Made API throttling more reliable

-Updated documentation

IMPORTANT *UPGRADE* NOTICES:

v6.00.38 and higher restructures CURRENCY settings in the config. USE THE LATEST/UPGRADED CONFIG.PHP,
AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.

-------------------------------------------------------------------



-------------------------------------------------------------------
6.01.00

-Refactoring / optimization of ENTIRE markets API data parsing logic (prep for UPCOMING 'Add New Asset' feature, in admin 'Portfolio Assets' WEB INTERFACE)

-Upgraded Idex exchange API to v4

IMPORTANT *UPGRADE* NOTICES:

v6.00.38 and higher restructures CURRENCY settings in the config. USE THE LATEST/UPGRADED CONFIG.PHP,
AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.

-------------------------------------------------------------------








