@@ -6781,6 +6781,8 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -Refactoring / optimization of ENTIRE markets API data parsing logic (prep for UPCOMING 'Add New Asset' feature, in admin 'Portfolio Assets' WEB INTERFACE)
 
+-Optimizations / polish on the Access Stats UX and logic
+
 -Upgraded Idex exchange API to v4
 
 IMPORTANT *UPGRADE* NOTICES:
